getting height correct and scrollbar to work

--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,21 @@
   color: grey;
   font-family: Nunito,-apple-system,BlinkMacSystemFont,Roboto,Segoe UI,system-ui,Oxygen,Ubuntu,Cantarell,Droid Sans,Helvetica Neue,sans-serif;
 }
+.zipCodeInPopup:focus {
+  all:revert; 
+  margin-left: 87px;
+  margin-right: 10px;
+  margin-top: 10px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  font-weight: 325;
+  font-size: 17px;
+  font-family: Nunito,-apple-system,BlinkMacSystemFont,Roboto,Segoe UI,system-ui,Oxygen,Ubuntu,Cantarell,Droid Sans,Helvetica Neue,sans-serif;
+  outline: 1px solid rgb(191, 191, 191); ;
+  border: none;
+  border-radius: 25px;
+  text-align: center;
+}
 .pickupAt{
   all:revert; 
   padding-left: 10px;
@@ -290,16 +305,19 @@
 }
 #top-level-div{
   background-color: white; 
-  height: 100%;
+  /*min-height: 100px;
+  height: 100%;*/
+  max-height: 100%;
   width: 360px;
   position: fixed;
   z-index: 2147483646;
   display: block;
-  overflow-y: auto;
-  top: 10px; /* Adjust as needed */
-  right: 10px; /* Adjust as needed */
+  overflow: scroll;
+  /*overflow-y: auto;*/
+  top: 10px; 
+  right: 10px; 
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  border-radius: 10px; /* Adjust the radius for the desired roundness */
+  border-radius: 10px; 
   text-align: center;
 }
 .topLevelLocationPopup{
